--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ["main"]
-
+    branches: ["js-tmp"]
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -11,30 +10,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build the Docker image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-      - name: Push Docker image to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+        run: docker build . --file Dockerfile --tag ${{ github.actor }}/octopus-usage-exporter:latest
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Tag Docker image for GitHub Container Registry
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+        run: docker tag ${{ github.actor }}/octopus-usage-exporter:latest ghcr.io/${{ github.actor }}/octopus-usage-exporter:latest
+
       - name: Push Docker image to GitHub Container Registry
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+        run: docker push ghcr.io/${{ github.actor }}/octopus-usage-exporter:latest
